improved unicode support, now correctly parses up to utf-32 restricted boolean values to lowercase false/true